[package]
name = "target-notifier-proc"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4"
linked-hash-map = "0.5.6"
syn = { version = "1.0", features = ["full", "extra-traits" ] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = { version = "1", default-features = false }

[lib]
proc-macro = true